update notification module and test phase
